# myyic

./: README.md  pyproject.toml
src/myyic/: constants.py  random_myyic.py  validate_myyic.py
