[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "myyic"
version = "0.0.1"
description = "This is a simple Python package to validate and generate random Malaysia's National Registration Identity Card (NRIC) which also known as MyKad or simply IC (Identity Card)."
readme = "README.md"
authors = [
    {name = "Frederickcjo", email="frederickcjo@gmail.com" }
]
keywords = ["python", "mykad", "nric", "malaysia", "myy", "ic", "generate", "random", "validate"]
requires-python = ">=3.0"

[project.urls]
Homepage = "https://github.com/frederickcjo/myyic"